# cia-estagios-crewai-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
frontend/: package.json
scripts/: test_api_keys.py
src/: __init__.py
src/api/: __init__.py  main.py
src/crews/: __init__.py
